* improved visual validation of input fields by using input:invalid CSS
* fixed fileName clearing after reload
* fixed issue where Save box would not close after saving on Windows 7
* added Romanian Aeroclub logo
* only show Harmony box on CIVA forms when Harmony K is present
* renamed 'demo' to 'library' throughout as this is more appropriate. Individual sequences are named 'programme'

2016.3.5
* updated NZAC rules for 2016/2017

2016.3.4.1
* fixed bug where Grid could not be (de)selected for print because pilotCard invisibly overlaps

2016.3.4
* replaced all <a> tags that only link to # by <span>
* fixed bug where an illegal sequence link url could stop javascript execution
* updated add-to-homescreen
* fixed handling of non-Aresti tri figures with snap/spin/tumble as 2nd or 3rd roll

2016.3.3
* removed SF definition from all Free Known sequences
* improved queue/figures switching in figure selector
* improved menu by showing some items disabled when applicable
* moved to new hosting provider antagonist.nl
* enabled https, required for appCache in the future
* fixed issue with selecting figures after exiting Free Unknown designer

2016.3.2
* moved Tau and degToRad to config.js and changed to Math.Tau / Math.degToRad
* fixed printing for Safari and Edge by using win.document.createElement in buildForms
* changed file saving to use blobs and fileSaver.js
* improved Chrome detection in checkForApp
* enabled printing for iOS
* added dismissal of dialogs by clicking outside of them
* restored text selection for docs
* fixed bug where sequence drawing scrolls back to top left after selecting figure
* updated instructions on save dialogs
* added selection of margins to print dialog (disabled on iOS due to lack of support)
* assured scrollbar is drawn right of leftBlock when visible (Issue #206)
* hide figure comments box by default, unless comment present
* changed < to &lt; in sequence xml to prevent parsing problems