@@ -96,7 +96,6 @@ images/startup_ipad_landscape.jpg
 images/startup_ipad_portrait.jpg
 images/startup_retina.jpg
 index.html
-iOSsave.html
 jszip.min.js
 language.html
 languages/en.js
